Content updates for LPA manage users

--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -22,7 +22,7 @@
 
 {% set nav = true %}
 
-{% set title = 'Manage appeals' %}
+{% set title = 'manage your appeals' %}
 
 {% block beforeContent %}
 
@@ -97,7 +97,7 @@
         firstCellIsHeader: false,
         head: [
           {
-            html: 'Appeal reference'
+            html: 'Appeal number'
           },
           {
             html: 'Application number'
