--- a/app/views/manage/manage-users/v3/index.html
+++ b/app/views/manage/manage-users/v3/index.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Manage users' %}
+{% set title = 'Add and remove users' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
