Tidy up of LPA links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,20 +74,40 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Service start points
+        Access to the service
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/emails/">Communication with the LPA</a>
+          <a href="/manage/access/v1/service-invite">
+            Invite to the service
+          </a>
         </li>
         <li>
-          <a href="manage/access/">Service start page</a>
+          <a href="/manage/access/v1/access-email">Accessing the LPA service (visiting the service with no session)</a>
         </li>
+        <li>
+          <a href="/manage/access/v1/email--code">Email with secure code</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        LPA dashboard and manage access
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="manage/appeals/?questionnaire=&statement=&finalcomments=">Planning appeals (list of appeals)</a>
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Emails about appeals
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="/manage/emails/">Communication with the LPA</a>
         </li>
       </ul>
 
