--- a/app/views/manage/emails/index.html
+++ b/app/views/manage/emails/index.html
@@ -35,7 +35,7 @@
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="v1/service-invite" class="govuk-link">Invite to the service</a></li>
+      <!-- <li><a href="v1/service-invite" class="govuk-link">Invite to the service</a></li> -->
       <li><a href="v1/appeal-valid" class="govuk-link">Appeal valid, do the questionnaire</a></li>
       <li><a href="v1/appeal-statements" class="govuk-link">Appeal statements (cross-copy)</a></li>
     </ul>
