--- a/app/views/manage/final-comments/v1/add-comments.html
+++ b/app/views/manage/final-comments/v1/add-comments.html
@@ -11,8 +11,8 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
-    html: 'Back to your planning appeals',
-    href: 'manage/#manage'
+    html: 'Back to manage your appeals',
+    href: '/manage/appeals/v3'
   }) }}
 {% endblock %}
 
