Update to email template

--- a/app/views/_layouts/layout-email.html
+++ b/app/views/_layouts/layout-email.html
@@ -30,13 +30,13 @@
 {% block content %}
 	{% block emailHeader %}{% endblock %}
 
-	<div class="govuk-!-margin-bottom-9">
+	<div class="govuk-!-margin-bottom-3">
 		<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 	</div>
 
-	<div class="email-header">
+	<!-- <div class="email-header">
 		<img src="/public/images/pins-logo-email.png" height="54">
-	</div>
+	</div> -->
 
 	{% block emailContent %}{% endblock %}
 
