Tidy up of the LPA dashboard, links and email templates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,19 +74,14 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Access to the service
+        Access and emails about appeals
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/access/v1/service-invite">
-            Invite to the service
-          </a>
+          <a href="/manage/access/">Accessing the service</a>
         </li>
         <li>
-          <a href="/manage/access/v1/access-email">Accessing the LPA service (visiting the service with no session)</a>
-        </li>
-        <li>
-          <a href="/manage/access/v1/email--code">Email with secure code</a>
+          <a href="/manage/emails/">Appeal action notifications</a>
         </li>
       </ul>
 
@@ -99,15 +94,6 @@
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
-        </li>
-      </ul>
-
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Emails about appeals
-      </h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/manage/emails/">Communication with the LPA</a>
         </li>
       </ul>
 
