--- a/app/views/manage/access/v1/access-email.html
+++ b/app/views/manage/access/v1/access-email.html
@@ -1,8 +1,13 @@
-{% extends '_layouts/layout-main.html' %}
+{% extends '_layouts/layout-pins.html' %}
 
 {% set title = 'What is the email address you used to save the appeal?' %}
 
-{% set prototypeLinks = [{href: 'email--code', text: 'Email with a code'}] %}
+{% set prototypeLinks = [
+  {
+    href: 'email--code',
+    text: 'Email with a code'
+  }
+] %}
 
 {% set back = false %}
 
