LPAQ S78 task list update to include added listed building details + made the task list full width

--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-building-building.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-building-building.html
@@ -47,7 +47,7 @@
               text: 'Building address'
             },
             value: {
-              text: '138-142, York Road, Bedminster, Bristol, BS3 4AL'
+              text: '155, York Road, Bedminster, Bristol, BS3 4AL'
             }
           }
         ]
