--- a/app/views/manage/questionnaire/v13/task-list.html
+++ b/app/views/manage/questionnaire/v13/task-list.html
@@ -55,6 +55,10 @@
         }
       </style>
 
+    </div>
+
+    <div class="govuk-grid-column-full">
+
       <ol class="app-task-list">
 
         {% include "./task-list__constraints.html" %}
