--- a/app/views/manage/questionnaire/v13/constraints/scheduled-monument.html
+++ b/app/views/manage/questionnaire/v13/constraints/scheduled-monument.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Would the development affect a scheduled monument??' %}
+{% set title = 'Would the development affect a scheduled monument?' %}
 
 {% block questions %}
   {{ govukRadios({
