Sorting out appeal references in the LPA

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -105,7 +105,7 @@
           <a href="manage/notify/">Notify interested parties</a>
         </li>
         <li>
-          <a href="manage/questionnaire/">Questionnaire</a>
+          <a href="manage/questionnaire/">S78 questionnaire</a>
         </li>
         <li>
           <a href="manage/statement/">Appeal statement</a>
