--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
 {% set nav = false %}
-{% set title = 'Questionnaire' %}
+{% set title = 'S78 questionnaire' %}
 
 {% block backLink %}
   {{ govukBackLink({
