--- a/app/views/manage/statement/v1/enter-statement.html
+++ b/app/views/manage/statement/v1/enter-statement.html
@@ -53,7 +53,7 @@
             text: 'Appeal reference'
           },
           value: {
-            text: 'APP/Q9999/D/21/1345264'
+            text: '1345264'
           }
         },
         {
